# web3-poc

./: .gitignore  README.md  package-lock.json  package.json
near/: .env.example  README.md  package.json  tsconfig.json
near/src/: ethereum.ts  index.ts  kdf.ts  near.ts
wormhole/: README.md  foundry.toml  lib.rs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig-node.json  tsconfig.json
wormhole/evm/: BytesLib.sol  IWormhole.sol  Main.sol
wormhole/near/: package-lock.json  package.json
wormhole/near/src/: contract.ts
wormhole/scripts/: constants.ts  evm.ts  near.ts  sui.ts  test-evm-evm.ts  test-near-evm.ts  test-solana-evm.ts  test-sui-evm.ts  utils.ts
wormhole/scripts/solana/: index.ts  program.ts  types.ts  utils.ts
wormhole/scripts/solana/accounts/: config.ts  foreignEmitter.ts  received.ts  wormhole.ts
wormhole/scripts/solana/instructions/: initialize.ts  receiveMessage.ts  registerEmitter.ts  sendMessage.ts
wormhole/solana/: Anchor.toml
wormhole/solana/programs/nayms/src/: context.rs  lib.rs  message.rs
wormhole/solana/programs/nayms/src/state/: received.rs
wormhole/solana/programs/solana/: Cargo.toml
wormhole/solana/programs/solana/src/: error.rs  lib.rs
wormhole/src/: index.ts
wormhole/sui/: .gitignore  Move.toml  client.yaml  sui.keystore
wormhole/sui/sources/: send.move
