[package]
name = "solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana"

[features]
default = ["devnet"]
devnet = ["wormhole-anchor-sdk/solana-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "wormhole-anchor-sdk/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
wormhole-anchor-sdk = { version = "0.30.1-alpha.3" , default-features = false }
wormhole-io = { version = "0.3.0-alpha.1" }
